update to group search

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ US-Stock-Symbols
 src/stock_indicator/__pycache__
 run_daily_job.sh
 cron_logs
-data/*
 !data/sic_to_ff.csv
 logs
 cache
+data/stock_data
