--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-US-Stock-Symbols-main/.DS_Store
-log/.DS_Store
-result_output/.DS_Store
-stock_output/.DS_Store
 .DS_Store
-logs
-cache
-data/stock_data
-venv
-cron_logs/cron_stdout.log
-local_data/current_status.json
+logs/*
+cache/*
+data/stock_data/*
+venv/*
+.venv/*
+cron_logs/*
+local_data/*
 .vscode
+*.swp
