--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,35 @@ name = "stock-indicator"
 version = "0.1.0"
 description = "Stock indicators and trading simulation"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.11"
 dependencies = [
-    "pandas",
-    "yfinance",
-    "requests"
+    "beautifulsoup4"==4.13.4,
+    "certifi"==2025.8.3,
+    "cffi"==1.17.1,
+    "charset-normalizer"==3.4.2,
+    "cramjam"==2.11.0,
+    "curl_cffi"==0.12.0,
+    "fastparquet"==2024.11.0,
+    "frozendict"==2.4.6,
+    "fsspec"==2025.7.0,
+    "idna"==3.10,
+    "multitasking"==0.0.12,
+    "numpy"==2.3.2,
+    "packaging"==25.0,
+    "pandas"==2.3.1,
+    "peewee"==3.18.2,
+    "platformdirs"==4.3.8,
+    "protobuf"==6.31.1,
+    "pyarrow"==21.0.0,
+    "pycparser"==2.22,
+    "python-dateutil"==2.9.0.post0,
+    "pytz"==2025.2,
+    "requests"==2.32.4,
+    "six"==1.17.0,
+    "soupsieve"==2.7,
+    "typing_extensions"==4.14.1,
+    "tzdata"==2025.2,
+    "urllib3"==2.5.0,
+    "websockets"==15.0.1,
+    "yfinance"==0.2.65
 ]
