--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,6 @@ six==1.17.0
 soupsieve==2.7
 typing_extensions==4.14.1
 tzdata==2025.2
-urllib3==2.5.0
+urllib3==2.5.0å
 websockets==15.0.1
 yfinance==0.2.65
